- Actualización de appsettings: Ahora existe una configuración separada para Kafka - Languages: se agregan valores de globalizacion - Se modifican settings de app y se crean especificos para kafka - Se agrega una clase dto para el retorno y exposición de las transacciones. - Se añade un atributo de mensajes a la representacion de tabla de TransactionEventModel - Se actualiza repositorio para TransactionEventModel por el cambio anteriormente mencionado. - Se configuran los service extensions para los settings de kafka y el kafka consumer - Se crea la clase de antifraud en servicio, añadiendo las validaciones de negocio. - Se ajustan valores hardcoded en TransactionService, ahora se toman del setting - Se desarrolla KafkaConsumer

--- a/src/Antifraud.API/Antifraud.Common/Globalization/Languages.en.resx
+++ b/src/Antifraud.API/Antifraud.Common/Globalization/Languages.en.resx
@@ -129,10 +129,19 @@
   <data name="ParameterRequired" xml:space="preserve">
     <value>Parameter {0} is required.</value>
   </data>
+  <data name="RejectionInvalidTransaction" xml:space="preserve">
+    <value>Provided transaction is invalid and will not be procesed.</value>
+  </data>
   <data name="RejectionMaxTransactionAllowed" xml:space="preserve">
     <value>The accumulated transactions per day exceed the allowed limit.</value>
   </data>
   <data name="RejectionMaxValueExceeded" xml:space="preserve">
     <value>Transaction amount exceeds maximum allowed of 2,000.</value>
+  </data>
+  <data name="TransactionEventNotFound" xml:space="preserve">
+    <value>No event transaction was found given those parameters.</value>
+  </data>
+  <data name="TransactionNotFound" xml:space="preserve">
+    <value>No transaction was found given those parameters.</value>
   </data>
 </root>
